<resources>
    <string name="app_name">Care4Dear</string>
    <string name="app_login">Login</string>

    <string name="shared_second">Second</string>
    <string name="shared_minute">Minute</string>
    <string name="shared_hour">Hour</string>

    <string name="error_connection">Connection error</string>
    <string name="error_general">Server request error</string>
    <string name="error_invalid_url">Invalid server URL</string>
    <string name="error_invalid_frequency">Frequency must be a valid number</string>

    <string name="devices_title">Devices</string>
    <string name="send_command_title">Send command</string>
    <string name="get_route_title">Get Route</string>
    <string name="get_geofence_list">List Geofence</string>
    <string name="add_geofence_list">Add Geofence</string>
    <string name="get_event_list">Events in last 7 days</string>
    <string name="configure_sms">Configure Device</string>

    <string name="event_from_date">From Date</string>
    <string name="event_to_date">To Date</string>



    <string name="settings_title">Settings</string>
    <string name="logout_title">Logout</string>
    <string name="slidingbuttons_title">Buttons</string>

    <string name="settings_url">Server</string>
    <string name="settings_email">Email</string>
    <string name="settings_password">Password</string>

    <string name="user_kn">kn</string>
    <string name="user_kmh">km/h</string>
    <string name="user_mph">mph</string>

    <string name="position_time">Time</string>
    <string name="position_latitude">Latitude</string>
    <string name="position_longitude">Longitude</string>
    <string name="position_speed">Speed</string>
    <string name="position_altitude">Altitude</string>
    <string name="position_course">Course</string>

    <string name="action_show_on_map">Show on map</string>
    <string name="action_send_command">Send command</string>
    <string name="action_get_route">Get Route</string>
    <string name="action_get_geofence">Get Geofence</string>
    <string name="action_add_geofence">Add Geofence</string>
    <string name="action_edit_geofence">Edit Geofence</string>
    <string name="action_delete_geofence">Delete Geofence</string>
    <string name="action_list_event">List Events</string>
    <string name="action_sms_configure">Configure Device</string>

    <string name="command_command">Command</string>
    <string name="command_frequency_frequency">Frequency</string>
    <string name="command_frequency_unit">Unit</string>
    <string name="command_send">Send</string>
    <string name="command_sent">Command has been sent</string>

    <string name="command_alarm_arm">Arm</string>
    <string name="command_alarm_disarm">Disarm</string>
    <string name="command_engine_stop">Engine Stop</string>
    <string name="command_engine_resume">Engine Resume</string>
    <string name="command_position_periodic">Periodic Reporting</string>
    <string name="command_frequency">Frequency</string>
    <string name="title_activity_test_ui">TestUIActivity</string>


    <string name="fill_radius">Set Radius</string>
    <string name="addressGeocode">Drag pointer on map or Give street name,zip below</string>
    <string name="address">eg.outer ring rd,560045</string>
    <string name="getLatLong">Get Add</string>
    <string name="geofencename">Enter Geofence Name</string>
    <string name="savegeofence">Save</string>

    <string name="hd_eventtype">Type</string>
    <string name="hd_geofenceid">Geofence</string>
    <string name="hd_eventtime">Time</string>

    <string name="hd_routeid">S.No</string>
    <string name="hd_routetime">Time</string>
    <string name="hd_routeaddress">Address</string>

    <string name="routedisplayLang">Language</string>
    <string name="get_route_detail">Route Details</string>



</resources>
