<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_show_on_map"
        android:title="@string/action_show_on_map" />

    <item
        android:id="@+id/action_send_command"
        android:title="@string/action_send_command" />

    <item
        android:id="@+id/action_send_geofence"
        android:title="@string/action_send_geofence" />

    <item
        android:id="@+id/action_get_geofence"
        android:title="@string/action_get_geofence" />

    <item
        android:id="@+id/action_add_geofence"
        android:title="@string/action_add_geofence" />

    <item
        android:id="@+id/action_list_event"
        android:title="@string/action_list_event" />

    <item
        android:id="@+id/action_sms_configure"
        android:title="@string/action_sms_configure" />



</menu>
