<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fill_radius"/>

        <SeekBar
            android:id="@+id/radiusSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:indeterminate="false"
            android:max="1000"
            android:progress="200"
            android:scrollIndicators="bottom" />
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addressGeocode"
        android:textColor="#ff0040"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:hint="@string/address"
            android:id="@+id/getAddress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="textPostalAddress|textCapWords"/>
    <!--        android:imeActionLabel="Submit" -->



        <Button android:text="@string/getLatLong"
            android:id="@+id/getLatLong"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>




    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText android:hint="@string/geofencename"
            android:id="@+id/getgeofencename"
            android:textColorHint="#ff0040"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:inputType="textAutoComplete|textPostalAddress|textCapWords"
            android:imeOptions="actionDone"
            android:singleLine="true"

            />

        <Button android:text="@string/savegeofence"
            android:id="@+id/savegeofence"


            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <fragment
        android:id="@+id/googleMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment"/>
</LinearLayout>
